<resources>
    <string name="app_name">바로북마켓</string>
    <string name="welcome_message">바로북마켓에 오신 것을 환영합니다!</string>
    <string name="app_description">구매 후 다음 날 바로 배송해주는 바로북마켓입니다.</string>
    <string name="btn_go_to_list">도서 목록 보기</string>
    <string name="menu_home">홈으로</string>
    <string name="menu_mypage">마이페이지</string>
    <string name="menu_booklist">도서목록</string>
    <string name="menu_setting">설정</string>
    <string name="menu_cart">장바구니</string>
    <string name="menu_order">주문</string>
    <string name="splash_sub_title">바로북마켓, 다음 날 바로 받는 도서</string>
    <string name="hint_id">아이디를 입력하세요</string>
    <string name="hint_pw">비밀번호를 입력하세요</string>
    <string name="btn_login">로그인</string>
    <string name="error_empty_fields">아이디와 비밀번호를 모두 입력해주세요.</string>
    <string name="login_success">로그인 성공!</string>
    <string name="booklist">도서 목록</string>
    <string name="bookmoreview">도서 상세 보기</string>
    <string name="title_order">주문서 작성</string>
    <string name="order_section_books">주문 도서 확인</string>
    <string name="order_section_shipping">배송지 정보 입력</string>
    <string name="hint_order_name">수령인 이름</string>
    <string name="hint_order_phone">연락처 (- 제외)</string>
    <string name="hint_order_address">배송지 주소</string>
    <string name="btn_order_submit">주문 확정 및 결제하기</string>
    <string name="order_success">주문이 정상적으로 완료되었습니다!</string>
    <string name="title_mypage">마이페이지</string>
    <string name="profile_hello">안녕하세요,</string>
    <string name="profile_suffix">님!</string>
    <string name="profile_sub_title">바로북마켓 회원 정보</string>
    <string name="btn_logout">로그아웃하기</string>
    <string name="logout_message">로그아웃 되었습니다.</string>
</resources>