<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:gravity="center"
    android:padding="32dp">

    <ImageView
        android:id="@+id/iv_login_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/ic_launcher"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:layout_marginBottom="32dp"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="@color/brand_primary"/>

    <EditText
        android:id="@+id/et_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_id"
        android:inputType="text"
        android:padding="14dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="16dp"
        android:background="@android:drawable/editbox_background_normal"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_pw"
        android:inputType="textPassword"
        android:padding="14dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="28dp"
        android:background="@android:drawable/editbox_background_normal"/>

    <Button
        android:id="@+id/btn_login_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:backgroundTint="@color/brand_primary"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="16dp"
        android:padding="12dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/text_gray"
        android:text="아이디 찾기"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/text_gray"
        android:text="비밀번호 찾기"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/text_gray"
        android:text="회원가입"/>

</LinearLayout>